--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ beautifulsoup4 = "^4.12.3"
 plotly = "^5.21.0"
 numpy = "^1.26.4"
 nbformat = "^5.10.4"
+mlxtend = "^0.23.1"
+pyarrow = "^16.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
