--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -13,20 +14,9 @@ beautifulsoup4 = "^4.12.3"
 plotly = "^5.21.0"
 numpy = "^1.26.4"
 nbformat = "^5.10.4"
-<<<<<<< HEAD
-=======
-mlxtend = "^0.23.1"
-pyarrow = "^16.0.0"
-pyfpgrowth = "^1.0"
-gower = "^0.1.2"
-matplotlib = "^3.8.4"
-prince = "^0.13.0"
-altair = "^5.3.0"
-vegafusion = "^1.6.7"
-vegafusion-python-embed = "^1.6.7"
-vl-convert-python = "^1.4.0"
 scipy = "^1.13.0"
->>>>>>> ab6e997 (Updates)
+scikit-learn = "^1.4.2"
+matplotlib = "^3.8.4"
 
 
 [tool.poetry.group.dev.dependencies]
